--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
-<nav>
-  <a href="#" routerLink="/authorization/sign-in">sign-in</a>
-  <a href="#" routerLink="/authorization/sign-up">sign-up</a>
-</nav>
+<app-header [nameCompany]="title"></app-header>
 <router-outlet></router-outlet>
-
+<app-footer [nameCompany]="title"></app-footer>
